[package]
name = "test_physic_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
physic_engine = { git = "https://github.com/Baptistemontan/physic_engine" }
gloo = "0.7.0"
wasm-timer = "0.2.5"
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
